14.3/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deffault-deny-ingress
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
